# MultiDimGrid

./: CMakeLists.txt  LICENSE.md  README.md  multidim_grid.hpp
example/: 00-readme.cpp  01-basic.cpp  CMakeLists.txt
test/: CMakeLists.txt
